--- a/package.json
+++ b/package.json
@@ -5,20 +5,26 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "mocha -r ts-node/register ./**/*.spec.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/expect": "^24.3.0",
     "@types/express": "^4.17.11",
+    "@types/express-fileupload": "^1.1.6",
+    "@types/mocha": "^8.2.1",
     "@types/node": "^14.14.31",
+    "mocha": "^8.3.1",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.1",
     "express-winston": "^4.1.0",
     "moment": "^2.29.1",
     "puppeteer": "^8.0.0",
